    in the workspace (stated as a dependency in the DESCRIPTION file).

NEW FEATURES:

    o New function pValue_GO() allows calculation of P-value for each
    ontology using permutation of genes labels. This allows users to estimate
    the chance of seeing a GO term reach a particular rank (or score).
    Features a fancy progres bar shamelessly adapted from StackOverflow.

    o A rank.by slot is now created by the GO_analyse() function in the result
    object to state the metric used to order the result tables.

    o rerank() function now supports re-ordering by P-value. Note that this
    is only applicable to the output of the pValue_GO() function mentioned
    above.

    o rerank() function now updates the rank.by slot of the result object
    to state the current ordering metric.

    o subset_scores() function now allows filtering by P-value. Note that this
    is only applicable to the output of the pValue_GO() function mentioned
    above.

    o Backward compatibility with Ensembl annotation releases 75 and earlier,
    which used 'external_gene_id', which was renamed to 'external_gene_name'
    in releases 76 and later.

    o table_genes() function defaults to sorting genes by decreasing score
    (equivalent to increasing rank). Gene feature name or identifier are
    supported alternative filters for sorting.


UPDATED FEATURES:

    o Allow user to override row_labels in heatmap_GO. This way, the 
    color-coding of the sample can be kept, while better description of the
    samples can be used to label them, instead of the phenodata values.

GENERAL UPDATES:

    o Updated the AlvMac training dataset to include 'RPL36A' an example
    of multiple Ensembl gene identifier annotated to the same gene name.

    o Updated the AlvMac example custom annotations to match the updated
    dataset.

    o Updated the example AlvMac_results to match the updated dataset.

    o Set the random seed prior to running the GO_analyse() example in 