@@ -13,16 +13,19 @@ Authors@R: c(
     person(given=c("Stephen", "V."), family="Gordon", role = c("ths")),
     person(given=c("David", "E."), family="MacHugh", role = c("ths")))
 Description: The package contains methods to visualise the expression profile
-    of genes from a microarray or RNA-seq experiment and offers a clustering
-    analysis to identify GO terms enriched in genes with expression levels
-    best clustering two or more predefined groups of samples. Annotations for
-    the genes present in the expression dataset are obtained from Ensembl
-    through the biomaRt package. The random forest framework is used to
-    evaluate the ability of each gene to cluster samples according to the
+    of genes from a microarray or RNA-seq experiment, and offers a 
+    supervised clustering approach to identify GO terms enriched in genes
+    with expression levels best clustering two or more predefined groups of
+    samples. Annotations for the genes present in the expression dataset may 
+    be obtained from Ensembl through the biomaRt package, if not provided by
+    the user. The default random forest framework is used to evaluate the
+    ability of each gene to cluster samples according to the
     factor of interest. Finally, GO terms are scored by averaging the
     rank (alternatively, score) of their respective gene sets to cluster
-    the samples. An ANOVA approach is also available as an alternative
-    statistical framework.
+    the samples. P-values may be computed to assess the significance of GO
+    term ranking. Visualisation function include gene expression profile,
+    gene ontology-based heatmaps, and hierarchical clustering of 
+    experimental samples using gene expression data.
 Depends: R (>= 3.0.2), grid, Biobase (>= 2.22.0), VennDiagram (>= 1.6.5)
 Imports: biomaRt (>= 2.18.0), stringr (>= 0.6.2), 
     ggplot2 (>= 0.9.0), RColorBrewer (>= 1.0), gplots (>= 2.13.0),
